--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ footer {
     align-items: center;
     flex-direction: column;
     padding: 20px;
-    background-color: black;
+    background-color: #285A43;
     color: #F8F8F8;
     text-align: center;
 }
